# Metodos-Cuantitativos

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  Untitled-1.md  main.cpp
include/: CMakeLists.txt
include/SDL3/include/: CMakeLists.txt
include/music/: CMakeLists.txt  music.h
include/plotGLC/: CMakeLists.txt  plotGLC.h
include/rand/: CMakeLists.txt  rand.h
src/: CMakeLists.txt
src/libs/SDL3/: CMakeLists.txt  SDL3.exp  SDL3.lib  SDL3_test.lib
src/music/: CMakeLists.txt  music.cpp
src/plotGLC/: CMakeLists.txt  plotGLC.cpp
src/rand/: CMakeLists.txt  rand.cpp
